tests/int/snapshots/integration__int__use_command__module_build_flags_t.snap
---
source: tests/int/use_command.rs
info:
  program: crawk
  args:
    - use
    - build
    - "-t"
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
