tests/int/snapshots/integration__int__use_command__module_cli_flags_r_t_e_g_G.snap
---
source: tests/int/use_command.rs
info:
  program: crawk
  args:
    - use
    - cli
    - "-r"
    - "-t"
    - "-e"
    - "-g"
    - "-G"
---
success: true
exit_code: 0
----- stdout -----
cli
 - crawk::version
cli::tests
 - crate::cli::CrawkArgs
 - crate::cli::CrawkCommands
 - crate::cli::CrawkOptions
 - crate::cli::UseArgs
 - crate::cli::validate_depth

----- stderr -----
