tests/int/snapshots/integration__int__use_command__module_cli_flags_t.snap
---
source: tests/int/use_command.rs
info:
  program: crawk
  args:
    - use
    - cli
    - "-t"
---
success: true
exit_code: 0
----- stdout -----
crate::cli::*
crawk::version

----- stderr -----
