tests/int/snapshots/integration__int__use_command__module_constants_flags_r.snap
---
source: tests/int/use_command.rs
info:
  program: crawk
  args:
    - use
    - constants
    - "-r"
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
