tests/int/snapshots/integration__int__use_command__module_constants_flags_r_t_e_G.snap
---
source: tests/int/use_command.rs
info:
  program: crawk
  args:
    - use
    - constants
    - "-r"
    - "-t"
    - "-e"
    - "-G"
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
